--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@ html {
   box-sizing: inherit; }
 
 body {
-  background: rgba(0, 128, 0, 0.3); }
+  background: #ffffff; }
   body.is-preload *, body.is-preload *:before, body.is-preload *:after, body.is-resizing *, body.is-resizing *:before, body.is-resizing *:after {
     -moz-animation: none !important;
     -webkit-animation: none !important;
